# cpp_project_template_lite

./: .gitignore  CMakeLists.txt  readme.md
cmake/: Documentation.cmake  SanitizeAddress.cmake  SanitizeMemory.cmake  SanitizeThreads.cmake  SanitizeUndefinedBehaviour.cmake  code-coverage.cmake  common.cmake
cmake/toolchains/: linux_aarch64.toolchain.cmake  linux_armhl.toolchain.cmake
cmake/version/: git_version.cmake  git_version.h.in
src/examples/: CMakeLists.txt  hello_version.cpp
src/lib/version/: CMakeLists.txt
src/modules/logger/: CMakeLists.txt  log.cpp  log.h
tests/: CMakeLists.txt  test_true.cpp
